tests/ParserTests/data/PathTest.xpl
node[] main() {
  node[] x;

  x/name0["pred1"==""]["pred2"==""]/name1["pred3"==""]["pred4"==""]/name2["pred5"==""]["pred6"==""];
}
